--- a/manual/ru/blender/Transparency.html
+++ b/manual/ru/blender/Transparency.html
@@ -30,7 +30,7 @@
     <img src="files/transparency-common/blending-vs-clipping.jpg">
 
     <p>
-      Alpha blending дороже, чем  Alpha clipping с точки зрения оптимизации, но обеспечивает мягкие переходы, которые выглядят красивее. Alpha blending также может вызвать артефакты связанные с Z-конфликтом, когда полигоны визуализируются в неправильном порядке. Alpha clipping лучше всего подходит для визуализации многочисленных небольших предметов (таких как трава или листья деревьев). Она также создает жёсткие края, которые не могут быть сглажены.
+      Alpha blending дороже, чем  Alpha clipping с точки зрения оптимизации, но обеспечивает мягкие переходы, которые выглядят красивее. Alpha blending также может вызвать артефакты связанные с Z-конфликтом, когда полигоны визуализируются в неправильном порядке. Alpha clipping создает жёсткие края, которые не могут быть сглажены, поэтому лучше всего подходит для визуализации многочисленных небольших предметов (таких как трава или листья деревьев).
     </p>
 
     [anchor:alpha_add]
