--- a/manual/ru/maya/Blend-Shapes.html
+++ b/manual/ru/maya/Blend-Shapes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Maya: Blend Shapes (aka Morphing) - Soft8Soft</title>
+    <title>Verge3D для Maya: Blend Shapes (Морфинг) - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how to setup, configure and animate blend shapes (morphing) in Verge3D for Maya."/>
     <base href="../../../" />
@@ -10,13 +10,13 @@
   </head>
   <body><article>
 
-    <h1>Морфинг / Maya</h1>
+    <h1>Blend Shapes (Морфинг) / Maya</h1>
 
     <p>
       Морфинг это функция, позволяющая изменять объекты в режиме реального времени. Наиболее распространенным вариантом использования этой функции является лицевая анимация. Морфинг также хорошо подходит для создания параметрических объектов, которые могут интерактивно изменять свои размеры, форму, толщину, округлости, профиль и т.д.
     </p>
 
-    <p>See the following demo as an example:</p>
+    <p>В качестве примера смотрите следующую демонстрацию:</p>
 
     <iframe class="video-480p" src="https://www.youtube.com/embed/5TbRgUcjwa4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -32,8 +32,8 @@
 
     <p>
         В Maya, откройте <a href="https://knowledge.autodesk.com/support/maya/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/Maya-CharacterAnimation/files/GUID-3C92402C-B24E-4874-AC8D-EADF976A19DC-htm.html" target="_blank">Shape Editor</a>,
-        и настройте цели для своих объектов. Обратите внимание, что из-за аппаратных ограничений вы можете создать только один морфинг, с ограниченным количеством активных целей. Чаще всего это 5 целей для объектов с кожей и 6 для других. См. <a href="manual/ru/introduction/Hardware-Related-Issues.html#too_many_attributes">здесь</a>
-        для получения дополнительной информации о лимите в более сложных случаях.<br/><br/>
+        и настройте цели для своих объектов. Обратите внимание, что из-за аппаратных ограничений вы можете создать только один морфинг, с ограниченным количеством активных целей. Чаще всего это 5 целей для объектов со скиннингом и 6 для объектов без него. Ознакомьтесь с <a href="manual/ru/introduction/Hardware-Related-Issues.html#too_many_attributes">данной информацией</a>
+        для получения дополнительных сведений о подсчете лимита в более сложных случаях.<br/><br/>
 
         Во время рендеринга движок выбирает 6 целей с наибольшим приоритетом, игнорируя все лишние цели. 
     </p>
@@ -46,7 +46,7 @@
     <h2>Анимация Морфинга</h2>
 
     <p>
-      Verge3D поддерживает покадровую анимацию морфинга. См. раздел <a href="manual/ru/maya/Animation.html#Blend_Shape_Animation">Анимация</a> для более подробной информации.
+      Verge3D поддерживает анимацию ключевых кадров морфинга. Смотрите раздел <a href="manual/ru/maya/Animation.html#Blend_Shape_Animation">Анимация</a> для получения более подробной информации.
     </p>
 
 
@@ -55,13 +55,13 @@
     <h2>Управление с помощью пазлов</h2>
 
     <p>
-      Для манипулирования морфингом в реальном времени есть два пазла: <a href="manual/ru/puzzles/Objects.html#get_morph_factor">получить коэффициент морфинга</a> и <a href="manual/ru/puzzles/Objects.html#set_morph_factor">настроить коэффициент морфинга</a>.
+      Для управления морфингом в реальном времени есть два пазла: <a href="manual/ru/puzzles/Objects.html#get_morph_factor">get morph factor</a> и <a href="manual/ru/puzzles/Objects.html#set_morph_factor">set morph factor</a>.
     </p>
 
 
     <h2>Остались вопросы?</h2>
 
-    <p>Задавайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
