--- a/manual/ru/maya/Installation.html
+++ b/manual/ru/maya/Installation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Maya: Installation - Soft8Soft</title>
+    <title>Verge3D для Maya: Установка - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="This page describes the installation procedure for Maya version of Verge3D. Find you how to setup Verge3D for Maya on Windows, macOS and Linux."/>
     <base href="../../../" />
@@ -10,78 +10,75 @@
   </head>
   <body><article>
 
-    <h1>Installation / Maya</h1>
+    <h1>Установка / Maya</h1>
 
     [contents]
 
 
     [anchor:prerequisites]
 
-    <h2>Prerequisites</h2>
+    <h2>Предварительные условия</h2>
 
     <h3>Maya</h3>
 
     <p>
-    Verge3D works on top of Autodesk Maya 2018-2022 which should be installed first. If this is not the case, you can download a free trial bundle from Autodesk's <a href="https://www.autodesk.com/products/maya/free-trial" target="_blank">website</a>, or try Verge3D for Blender instead.
+      Для начала необходимо установить Autodesk Maya 2018-2022, так как Verge3D работает поверх него. В случае отсутсвия программы, вы можете загрузить бесплатный пробный пакет с <a href="https://www.autodesk.com/products/maya/free-trial" target="_blank">сайта Autodesk</a>, или попробовать Verge3D для Blender.
     </p>
 
-    <p>We recommend using the latest stable version of Maya (2022 at the time of writing) for best results.</p>
+    <p>Мы рекомендуем использовать последнюю стабильную версию Maya (2022 на момент написания статьи) для достижения наилучших результатов.</p>
 
-    <h3>Operating system</h3>
+    <h3>Операционная система</h3>
 
     <p>
-    We recommend using Verge3D on Windows 10, macOS 10.14/10.15 or latest RedHat/CentOS/Fedora Linux. Make sure you have latest video drivers installed. No admin privileges are required for installation.
+      Мы рекомендуем использовать Verge3D на Windows 10, macOS 10.14/10.15 или последней версии RedHat/CentOS/Fedora Linux. Убедитесь, что у вас установлены последние версии видеодрайверов. Для установки не требуются права администратора.
     </p>
 
-    <h3>Web browser</h3>
+    <h3>Веб-браузер</h3>
 
     <p>
-    Verge3D can work in any browser such as Chrome, Firefox, Opera, Edge or Internet Explorer 11. We, however, recommend to use the Chrome browser for development as it is fast and provides good development tools. You might want to make it your default browser for more convenient previews.
+      Verge3D может работать в любом браузере, таком как Chrome, Firefox, Opera, Edge или Internet Explorer 11. Однако мы рекомендуем использовать браузер Chrome для разработки, так как он быстрый и предоставляет хорошие инструменты для разработки. Также вы можете сделать его браузером по умолчанию для более удобного предварительного просмотра.
     </p>
 
 
 
     [anchor:install_windows]
 
-    <h2>Install Verge3D on Windows</h2>
+    <h2>Установка Verge3D на Windows</h2>
 
     <p>
-    <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">Download</a> the Verge3D bundle and double click on the <strong>.exe</strong> file to run the installer.
+    <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">Скачайте</a> пакет Verge3D и дважды щелкните на файле <strong>.exe</strong>, чтобы запустить программу установки.
     </p>
 
     <p>
-    Choose an installation folder that have enough permissions for reading and writing (or better leave it by default). Installing in a system directory such as "Program Files" or "Desktop" is not recommended.
+      Выберите папку для установки, которая имеет достаточно прав на чтение и запись (или лучше оставьте ее по умолчанию). Не рекомендуется устанавливать в системные папки, такие как "Program Files" и "Desktop".
     </p>
 
     <img src="files/installation-maya/installer-maya-choosing-path.jpg" class="centered" style="max-width: 499px">
 
     <p>
-    Once the installation is complete, you may open Maya. If you had it running, be sure to close and open it again. Now go to *Plug-in Manager* settings...
-    </p>
+      После завершения установки вы можете открыть Maya. Если она была запущена, не забудьте закрыть и открыть ее снова. Теперь перейдите к настройкам *Plug-in Manager*...    </p>
 
     <img src="files/installation-maya/menu-plugin-manager.jpg" class="centered" style="max-width: 785px">
 
     <p>
-    ...and activate *verge3d.py* plug-in by enabling both *Loaded* and *Auto load* checkers.
+      ...и активируйте плагин *verge3d.py*, включив флажки *Loaded* и *Auto load*.
     </p>
 
     <img src="files/installation-maya/plugin-manager-enable-verge3d.jpg" class="centered" style="max-width: 450px">
 
     <p class="note">
-      Additionally you can activate *gltfExport.py* plug-in if you want to export
-      Verge3D scenes via the <b>File->Export All...</b> menu option. Enabling
-      *gltfExport.py* adds the *Verge3D GLTF* file type option for the *Export All*
-      dialog window.
-    </p>
+      Дополнительно вы можете активировать плагин *gltfExport.py*, если хотите экспортироватm сцены Verge3D через опцию меню <b>File->Export All...</b>. Включение
+      *gltfExport.py* добавляет опцию типа файла *Verge3D GLTF* для диалогового окна *Export All*.
+
 
     <p>
-    Now you should see *Verge3D* menu in the main menu bar.
-    </p>
+      Теперь вы должны увидеть меню *Verge3D* в строке главного меню.
+     </p>
 
     <img src="files/installation-maya/verge3d-menu.jpg" class="centered" style="max-width: 561px">
 
     <p>
-      You should now also be able to launch Verge3D's App Manager independently of Maya, by clicking on the desktop icon or using the Start menu.
+      Также теперь у вас есть возможность запускать Verge3D's App Manager независимо от Maya, нажав на значок на рабочем столе или используя меню "Пуск".
     </p>
 
     <img src="files/installation-maya/verge3d-desktop-icon.jpg" class="centered" style="max-width: 751px">
@@ -90,19 +87,19 @@
 
     [anchor:install_macos]
 
-    <h2>Install Verge3D on macOS</h2>
+    <h2>Установка Verge3D на macOS</h2>
 
     <p>
-      <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">Download Verge3D</a> XZ bundle and unpack it to a directory of your choice. Make sure you have enough permissions to read/write in this folder. Installing in a system directory is not recommended.
+      <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">Скачайте пакет Verge3D</a> XZ и распакуйте его в выбранный вами каталог. Убедитесь, что у вас достаточно прав для чтения/записи в этой папке. Установка в системный каталог не рекомендуется.
     </p>
 
 
     <p>
-      If you are running Maya version before 2022, you need to perform additional steps to install Python (which is part of the *Command Line Tools*). If you are running Maya 2022 or newer, go to the step with the *Plug-in Manager* invocation.
+      Если вы используете Maya версии до 2022 года, вам необходимо выполнить дополнительные шаги для установки Python (который входит в состав *Command Line Tools*). Если вы используете Maya 2022 или новее, перейдите к шагу с вызовом *Plug-in Manager*.
     </p>
 
     <p>
-      To install *Command Line Tools* open macOS Terminal and execute the command:
+      Для установки *Command Line Tools* откройте macOS Terminal и выполните команду:
     </p>
 
     <code>
@@ -110,55 +107,51 @@
     </code>
 
     <p>
-      If the tools are not installed on your system, the script will invoke the following installation dialog:
+      Если инструменты не установлены в вашей системе, сценарий вызовет следующее диалоговое окно установки:
     </p>
 
     <img src="files/installation-maya/installer-macos-command-line-tools.jpg" class="centered" style="max-width: 487px">
 
     <p>
-      Wait until the installation complete before you proceed with the further steps.
-    </p>
+      Дождитесь завершения установки, прежде чем приступать к дальнейшим действиям.    </p>
 
     <p>
-      Now open Maya and go to *Plug-in Manager* settings...
-    </p>
+      Теперь откройте Maya и перейдите к настройкам *Plug-in Manager*...    </p>
 
     <img src="files/installation-maya/menu-plugin-manager.jpg" class="centered" style="max-width: 785px">
 
     <p>
-      Click on the *Browse* button
+      Нажмите на кнопку *Browse*
     </p>
 
     <img src="files/installation-maya/plugin-manager-browse.jpg" class="centered" style="max-width: 621px">
 
     <p>
-      then go to the <em>Path_To_Verge3D_Installation/maya_plugin/setup</em> directory and open the <em>install.py</em> script.
+      затем перейдите в директорию <em>Path_To_Verge3D_Installation/maya_plugin/setup</em> и откройте скрипт <em>install.py</em>.
     </p>
 
     <img src="files/installation-maya/plugin-manager-open-install-script.jpg" class="centered" style="max-width: 847px">
 
     <p>
-      In newer Maya versions, the following dialog window might appear — click *Allow*.
+      В более новых версиях Maya может появиться следующее диалоговое окно - нажмите *Allow*.
     </p>
 
     <img src="files/installation-maya/untrusted-plugin-loading.jpg" class="centered" style="max-width: 569px">
 
     <p>
-      Restart Maya, open the *Plug-in Manager* settings again and activate the *verge3d.py* plug-in by enabling both *Loaded* and *Auto load* checkers.
+      Перезапустите Maya, снова откройте настройки *Plug-in Manager* и активируйте плагин *verge3d.py*, включив флажки *Loaded* и *Auto load*.
     </p>
 
     <img src="files/installation-maya/plugin-manager-enable-verge3d.jpg" class="centered" style="max-width: 450px">
 
     <p class="note">
-      Additionally you can activate *gltfExport.py* plug-in if you want to export
-      Verge3D scenes via the <b>File->Export All...</b> menu option. Enabling
-      *gltfExport.py* adds the *Verge3D GLTF* file type option for the *Export All*
-      dialog window.
+      Если хотите экспортировать сцены Verge3D через опцию меню <b>File->Export All...</b> вам необходимо активировать плагин *gltfExport.py*. Включение
+      *gltfExport.py* добавляет опцию типа файла *Verge3D GLTF* для диалогового окна *Export All*.
     </p>
 
     <p>
-      Now you should see *Verge3D* menu in the main menu bar.
-    </p>
+      Теперь вы должны увидеть меню *Verge3D* в строке главного меню.
+      </p>
 
     <img src="files/installation-maya/verge3d-menu.jpg" class="centered" style="max-width: 561px">
 
@@ -166,45 +159,43 @@
 
     [anchor:install_linux]
 
-    <h2>Install Verge3D on Linux</h2>
+    <h2>Установка Verge3D на Linux</h2>
 
     <p>
-      <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">Download Verge3D</a> XZ bundle and unpack it to a directory of your choice. Make sure you have enough permissions to read/write in this folder. Installing in a system directory is not recommended.
+      <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">Скачайте пакет Verge3D</a> XZ и распакуйте его в выбранный вами каталог. Убедитесь, что у вас достаточно прав для чтения/записи в этой папке. Установка в системный каталог не рекомендуется.
     </p>
 
     <p>
-      Now open Maya and go to *Plug-in Manager* settings...
+      Теперь откройте Maya и перейдите к настройкам *Plug-in Manager*...
     </p>
 
     <img src="files/installation-maya/menu-plugin-manager.jpg" class="centered" style="max-width: 785px">
 
     <p>
-      Click on the *Browse* button
+      Нажмите кнопку *Browse*
     </p>
 
     <img src="files/installation-maya/plugin-manager-browse.jpg" class="centered" style="max-width: 621px">
 
     <p>
-      then go to the <em>Path_To_Verge3D_Installation/maya_plugin/setup</em> directory and open the <em>install.py</em> script.
+      затем перейдите в директорию <em>Path_To_Verge3D_Installation/maya_plugin/setup</em> и откройте скрипт<em>install.py</em>.
     </p>
 
     <img src="files/installation-maya/plugin-manager-open-install-script.jpg" class="centered" style="max-width: 847px">
 
     <p>
-      Restart Maya, open the *Plug-in Manager* settings again and activate the *verge3d.py* plug-in by enabling both *Loaded* and *Auto load* checkers.
+      Перезапустите Maya, снова откройте настройки *Plug-in Manager* и активируйте плагин *verge3d.py*, включив флажки *Loaded* и *Auto load*.
     </p>
 
     <img src="files/installation-maya/plugin-manager-enable-verge3d.jpg" class="centered" style="max-width: 450px">
 
     <p class="note">
-      Additionally you can activate *gltfExport.py* plug-in if you want to export
-      Verge3D scenes via the <b>File->Export All...</b> menu option. Enabling
-      *gltfExport.py* adds the *Verge3D GLTF* file type option for the *Export All*
-      dialog window.
+      Если хотите экспортировать сцены Verge3D через опцию меню <b>File->Export All...</b> вам необходимо активировать плагин *gltfExport.py*. Включение
+      *gltfExport.py* добавляет опцию типа файла *Verge3D GLTF* для диалогового окна *Export All*.
     </p>
 
     <p>
-      Now you should see *Verge3D* menu in the main menu bar.
+      Теперь вы должны увидеть меню *Verge3D* в строке главного меню.
     </p>
 
     <img src="files/installation-maya/verge3d-menu.jpg" class="centered" style="max-width: 561px">
@@ -213,19 +204,19 @@
 
     [anchor:Configuring_Plugin_Path_Manually]
 
-    <h2>Configuring Plugin Path Manually</h2>
+    <h2>Настройка пути плагина вручную</h2>
 
-    <p>Sometimes Verge3D menu won't show up. This may happen due to various reasons:</p>
+    <p>Иногда меню Verge3D не отображается. Это может произойти по нескольким причинам:</p>
 
     <ul>
-      <li>You disabled the *Auto-Configure* option in the installer.</li>
-      <li>You installed and running an unsupported version of Maya.</li>
-      <li>You switched Windows user.</li>
+      <li>Вы отключили опцию *Auto-Configure* в программе установки.</li>
+      <li>Вы установили и запустили неподдерживаемую версию Maya.</li>
+      <li>Вы сменили пользователя Windows.</li>
     </ul>
 
-    <p>In such the case, you may use the following procedure to configure the plugin path manually.</p>
+    <p>В этом случае вы можете использовать следующую процедуру для настройки пути к плагину вручную.</p>
 
-    <p>Find the file named *Maya.env* which is typically located in on the following folders:</p>
+    <p>Найдите файл с именем *Maya.env*, который обычно находится в следующих папках:</p>
 
     <ul>
       <li>Windows - <em>\Users\user\Documents\maya\VERSION</em></li>
@@ -233,27 +224,27 @@
       <li>Linux - <em>$HOME/maya/VERSION</em></li>
     </ul>
 
-    <p>Edit this file to specify the *MAYA_PLUGIN_PATH* environment variable as follows:</p>
+    <p>Отредактируйте этот файл, чтобы указать переменную окружения *MAYA_PLUGIN_PATH* следующим образом:</p>
 
     <code>
       MAYA_PLUG_IN_PATH=\Users\user\verge3d_maya\maya_plugin
     </code>
 
     <p>
-      Save the file and open Maya. If you had it running, be sure to close and open it again. Locate the *Verge3D* plugin in the Plug-In Manager settings dialog. Activate it by clicking the both *Loaded* and *Auto load* checkers. Now you should see *Verge3D* menu in the main menu bar.
+      Сохраните файл и откройте Maya. Если она была запущена, не забудьте закрыть и открыть ее снова. Найдите плагин *Verge3D* в диалоге настроек Plug-In Manager. Активируйте его, нажав на флажки *Loaded* и *Auto load*. Теперь вы должны увидеть меню *Verge3D* в строке главного меню.
     </p>
 
 
 
-    <h2>What's Next</h2>
+    <h2>Что дальше?</h2>
 
-    <p>Familiarize yourself with the <a href="manual/ru/maya/Beginners-Guide.html">basics</a>!</p>
+    <p>Ознакомьтесь с <a href="manual/ru/maya/Beginners-Guide.html">основами</a>!</p>
 
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
