--- a/manual/ru/maya/Transparency.html
+++ b/manual/ru/maya/Transparency.html
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Transparency / Maya</h1>
+    <h1>Прозрачность / Maya</h1>
 
     <p>
-      Here we show how to enable transparency for Standard Surface, Lambert, and glTF-compliant PBR materials in Maya.
+      Здесь мы покажем, как включить прозрачность для Standard Surface, Lambert и glTF-совместимых PBR материалов в Maya.
     </p>
 
     [contents]
@@ -24,87 +24,88 @@
     <h2>Blended vs Masked</h2>
 
     <p>
-      Being a real-time 3D engine, Verge3D offers two main methods to handle transparent objects: alpha blending and alpha clipping (usually with an image mask). Blending enables combining a translucent foreground color with a background color, using the foreground color's alpha as blending factor. Clipping, on the other hand, simply discards all pixels with alpha less than some predefined threshold (always equal to 0.5 in Verge3D for Maya).
+      Будучи 3D-движком реального времени, Verge3D предлагает два основных метода работы с прозрачными объектами: альфа-смешивание и альфа-клиппинг (обычно с маской изображения). Смешивание позволяет объединить полупрозрачный цвет переднего плана с цветом фона, используя альфа-фактор цвета переднего плана в качестве коэффициента смешивания. Клиппинг, с другой стороны, просто отбрасывает все пиксели с альфой меньше определенного порога (в Verge3D для Maya он всегда равен 0,5).
     </p>
 
     <img src="files/transparency-common/blending-vs-clipping.jpg">
 
     <p>
-      Blending enables for smooth transitions, generally looks nicer but computationally more expensive than clipping. It may also produce z-sorting artifacts when polygons appear to be rendered in wrong order. Clipping works best for visualizing numerous small objects (such as grass or tree leaves). It also produces hard edges without any transitions which may be aliased.
+      Alpha blending дороже, чем Alpha clipping с точки зрения оптимизации, но обеспечивает мягкие переходы, которые выглядят красивее. Alpha blending также может вызвать артефакты связанные с Z-конфликтом, когда полигоны визуализируются в неправильном порядке. Alpha clipping создает жёсткие края, которые не могут быть сглажены, поэтому лучше всего подходит для визуализации многочисленных небольших предметов (таких как трава или листья деревьев). 
     </p>
 
     <p>
-      Use *Alpha Mode* dropdown in material settings to choose between blending and masking.
+      Используйте выпадающий список *Alpha Mode* в настройках материала, чтобы выбрать между смешиванием и клиппингом.
     </p>
 
     <img src="files/transparency-maya/alpha-mode.jpg" class="centered" style="max-width: 427px">
 
     [anchor:alpha_add]
 
-    <h2>Additive Composing (aka No Depth Writes)</h2>
+    <h2>Additive Composing (также известный как No Depth Writes)</h2>
 
     <p>
-      Verge3D also offers a special mode for disabling writing to the depth buffer while rendering. This results in polygons being excluded from pixel depth comparison. Such polygons are composited in additive manner, which sometimes can help get rid of blending artifacts.
+      Verge3D также предлагает специальный режим, для отключения буфера глубины во время рендеринга. Это приводит к отмене сравнения значений глубины пикселей перекрываемых полигонов. Такие полигоны будут визуализированы аддитивным способом, который иногда позволяет избавиться от артефактов альфа-смешения.
     </p>
 
     <img src="files/transparency-common/no-depth-writes.jpg">
 
     <p>
-    Select *Blend* in the *Alpha Mode* dropdown and uncheck the *Depth Write* option in material settings to enable this mode. In addition, you'll need to increase the *Rendering Order* value in <a href="manual/ru/maya/Lighting-and-Rendering.html#per_object_rendering_settings">object settings</a> to make you transparent object rendered above all.
+      Выберите *Blend* в выпадающем списке *Alpha Mode* и снимите флажок *Depth Write* в настройках материала, чтобы включить этот режим. Кроме того, вам нужно увеличить значение *Rendering Order* в параметре <a href="manual/ru/maya/Lighting-and-Rendering.html#per_object_rendering_settings">object settings</a> чтобы ваш прозранчх объект отрендерился первым.
     </p>
 
 
     [anchor:standard_surface_materials]
 
-    <h2>Transparency for Standard Surface Materials</h2>
+    <h2>Прозрачность Standard Surface Materials</h2>
 
     <p>
-      Transparency of Standard Surface (or aiStandardSurface) materials can be tweaked using the following material settings:
+      Прозрачность Standard Surface (или aiStandardSurface) материалов может быть настроена с помощью следующих параметров:
     </p>
 
     <img src="files/transparency-maya/standard-surface-transparency.jpg" class="centered" style="max-width: 422px">
 
-    <p>Parameters:</p>
+    <p>Параметры:</p>
 
     <dl>
       <dt>Transmission Weight</dt>
-      <dd>transmission factor of thin-walled and refractive materials.</dd>
+      <dd>коэффициент пропускания тонкостенных и преломляющих материалов.</dd>
       <dt>Transmission Color</dt>
-      <dd>color of refractive (*Thin Walled* off) material.</dd>
+      <dd>цвет преломления (*Thin Walled* отключен) материала.</dd>
       <dt>Thin Walled</dt>
-      <dd>use generic thin-walled or refraction-based transparency.</dd>
+      <dd>использовать общие тонкостенные или основанные на преломлении прозрачности.</dd>
       <dt>Opacity</dt>
-      <dd>opacity factor for thin-walled materials.</dd>
+      <dd>коэффициент непрозрачности для тонкостенных материалов.</dd>
       <dt>Alpha Mode</dt>
-      <dd>material transparency mode.</dd>
+      <dd>режим прозрачности материала.</dd>
       <dt>Depth Write</dt>
-      <dd>disable for additive transparency composing (see <a href="manual/ru/maya/Transparency.html#alpha_add">above</a>).</dd>
+      <dd>отключение для аддитивного составления прозрачности (смотрите <a href="manual/ru/maya/Transparency.html#alpha_add">выше</a>).</dd>
     </dl>
 
-    <p class="note">By default in Maya, the *Thin Walled* parameter is unchecked, which disables the most typical transparency rendering you expected to see in your interactive app. Always keep an eye on this setting when you're dealing with the transparent Standard Surface materials.</p>
+    <p class="note">По умолчанию в Maya параметр *Thin Walled* не отмечен, что отключает наиболее типичный рендеринг прозрачности, который вы ожидали увидеть в интерактивном приложении. Всегда следите за этим параметром, когда имеете дело с прозрачными материалами Standard Surface.
+    </p>
 
 
     [anchor:gltf_materials]
 
-    <h2>Transparency for glTF-compliant PBR Materials</h2>
+    <h2>Прозрачность glTF-compliant PBR материалов</h2>
 
     <p>
-      In order to enable transparency for such materials, one should bake transparency map as 4 (alpha) component of the base color texture and connect *Alpha* output of that texture to the *Opacity* input of the Standard Surface material.
+      Чтобы включить прозрачность для таких материалов, необходимо запечь карту прозрачности как 4 (альфа) компонент текстуры базового цвета и подключить *Alpha* выход этой текстуры к *Opacity* входу материала Standard Surface.
     </p>
 
     <img src="files/transparency-maya/gltf-compat-transparency.jpg">
 
     <p>
-      When no base color texture available, simply use unconnected *Opacity* parameter.
+      Если текстура базового цвета недоступна, просто используйте неподключенный параметр *Opacity*.
     </a>
 
     <p>
-      Use the *Alpha Mode* dropdown to choose between transparency modes.
+      Используйте выпадающий список *Alpha Mode* для выбора режима прозрачности.
     </p>
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
