--- a/manual/ru/maya/Camera.html
+++ b/manual/ru/maya/Camera.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Maya: Working with Camera - Soft8Soft</title>
+    <title>Verge3D для Maya: Работа с Камерой - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Find out how to create and control Maya cameras to be used with Verge3D."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Working with Camera / Maya</h1>
+    <h1>Работа с Камерой / Maya</h1>
 
     <p>
-      This page contains the information on how to setup Maya's cameras to be used with Verge3D.
+      На этой странице содержится информация о том, как настроить камеру в Maya для использования в Verge3D. 
     </p>
 
     [contents]
@@ -21,91 +21,91 @@
 
     [anchor:Setting_Up]
 
-    <h2>Setting Up in Maya</h2>
+    <h2>Настройка в Maya</h2>
 
     <p>
-      Simply add one of the supported cameras to you scene:
+      Просто добавьте одну из поддерживаемых камер в сцену:
     </p>
 
     <ul>
-      <li>*Camera* - since this camera has not explicit target, you should use Maya's *Look at Selection* to set camera's center of interest point.</li>
+      <li>*Camera* - поскольку эта камера не имеет явной цели, используйте *Look at Selection* в Maya, чтобы установить центральную точку для направления камеры.</li>
       <li>*Camera and Aim*</li>
       <li>*Camera, Aim and Up*</li>
     </ul>
 
     <p>
-      Alternatively, you can configure Maya's default camera such as *persp*.
+      В качестве альтернативы, в Maya вы можете настроить камеру по умолчанию, например *persp*.
     </p>
 
 
     [anchor:Verge3D_Per_Object_Settings]
 
-    <h2>Verge3D Per-Object Camera Settings</h2>
+    <h2>Verge3D Настройки Камеры для Каждого Объекта</h2>
 
     <p>
-      Each camera in Maya is assigned with Verge3D settings:
+      Каждой камере в Maya назначаются настройки Verge3D:
     </p>
 
     <img src="files/camera-maya/camera-settings.jpg" alt="Camera settings in Verge3D for Maya" class="centered" style="max-width: 405px">
 
     <p>
-      *Controls* - specify what type of controls will be assigned to the camera in Verge3D:
+      *Controls* - указать, какой тип элементов управления будет назначен камере в Verge3D:
     </p>
 
     <ul>
-      <li>*Orbit* - targeted 3D view.</li>
-      <li>*Flying* - free-flight view.</li>
-      <li>*First-Person* - first-person view with familiar character controls.</li>
-      <li>*Disable* - disable any controls. Specify if you're going to move your camera with animations, Puzzles or JavaScript.</li>
+      <li>*Orbit* - нацеленный 3D-обзор.</li>
+      <li>*Flying* - свободный полёт.</li>
+      <li>*First-Person* - вид от первого лица с привычным управлением персонажем.</li>
+      <li>*Disable* - отключить любые элементы управления. Укажите, будете ли вы перемещать камеру с помощью анимации, пазлов или JavaScript.</li>
     </ul>
 
     <p>
-      *Rotation Speed* - camera rotation speed factor.
+      *Rotation Speed* - коэффициент скорости вращения камеры.
     </p>
     <p>
-      *Movement Speed* - camera movevent speed factor.
+      *Movement Speed* - коэффициент скорости перемещения камеры.
     </p>
     <p>
-      *Perspective Distance Limits* - distance limits for perspective Orbit camera.
+      *Perspective Distance Limits* - пределы расстояния перспективы для камеры Orbit.
     </p>
     <p>
-      *Orthographic Zoom Limits* - zoom limits for othographic Orbit camera.
+      *Orthographic Zoom Limits* - предел увеличения в ортографии для камеры Orbit.
     </p>
     <p>
-      *Vertical Angle Limits* - vertical angle limits for Orbit camera.
+      *Vertical Angle Limits* - ограничение вертикального угла для камеры Orbit.
     </p>
     <p>
-      *Horizontal Angle Limits* - horizontal angle limits for Orbit camera.
+      *Horizontal Angle Limits* - ограничение горизонтального угла для камеры Orbit.
     </p>
 
 
-    <h3>First-Person Settings</h3>
+    <h3>Настройки вида от первого лица</h3>
 
-    <p>*Collision Material* - collision material which will be used for the first-person camera.</p>
+    <p>*Collision Material* - материал коллизии, который будет использоваться для камеры от первого лица.</p>
 
-    <p>*Gaze Level* - first-person camera "gaze" (or "head"/"eyes") level.</p>
+    <p>*Gaze Level* - уровень "взгляда" камеры от первого лица" (или "головы"/"глаз").</p>
 
-    <p>*Story Height* - first-person camera story height.</p>
+    <p>*Story Height* - общая высота камеры от первого лица.</p>
 
 
-    <h3>Rendering Settings</h3>
+    <h3>Настройки Рендера</h3>
 
     <p>
-      *Render Background* - enable to configure background color in Verge3D. See more information about this feature <a href="manual/ru/maya/Lighting-and-Rendering.html#background">here</a>.
+      *Render Background* - позволяет настроить цвет фона в Verge3D. Смотрите дополнительную информацию об этой функции <a href="manual/ru/maya/Lighting-and-Rendering.html#background">здесь</a>.
     </p>
 
 
     [anchor:Camera_Puzzles]
 
-    <h2>Camera Control with Puzzles</h2>
+    <h2>Управление Камерой с Помощью Пазлов</h2>
 
     <p>
-      You can use <a href="manual/ru/puzzles/Camera.html">camera puzzles</a> to control your camera in real time.
+      Вы можете использовать <a href="manual/ru/puzzles/Camera.html">пазлы камеры</a> для управления камерой в режиме реального времени.
     </p>
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
