--- a/manual/ru/maya/Material-Library.html
+++ b/manual/ru/maya/Material-Library.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Maya: Using Material Library - Soft8Soft</title>
+    <title>Verge3D для Maya: Использование Библиотеки Материалов - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how to use the material library in Verge3D for Maya."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Using Material Library / Maya</h1>
+    <h1>Использование Библиотеки Материалов / Maya</h1>
 
     <p>
-      Verge3D material library is a collection of ready-to-use materials which you can assign to your Maya models. Below is the description of a recommended workflow on how to install and use these materials efficiently.
+      Библиотека материалов Verge3D, это коллекция готовых к использованию материалов, которые вы можете назначить своей модели в Maya. Ниже, вы можете ознакомиться с процессом установки и эффективным методом использования данных материалов.
     </p>
 
     <img src="files/mat-library-maya/promo.jpg" class="centered" style="max-width: 819px">
@@ -24,41 +24,41 @@
 
     [anchor:installing]
 
-    <h2>Installing</h2>
+    <h2>Установка</h2>
 
     <p>
-      Material library is available in Soft8Soft store in the form of <a href="https://www.soft8soft.com/product/verge3d-maya-essential-material-pack/" target="_blank">Maya Essential Material Pack</a>.
+      В магазине Soft8Soft доступна библиотека материалов <a href="https://www.soft8soft.com/product/verge3d-maya-essential-material-pack/" target="_blank">Maya Essential Material Pack</a>.
     </p>
 
     <p>
-      Simply unzip the archive with a library pack to any folder on your computer. Inside this folder there are *mb* files (one file per material). The textures used in the materials are located in the *material_maps* folder. The folder *environments* contains 3 variants of HDR images that you can use for the environment (each variant comes in 3 resolutions: 1k, 2k and 4k).
+      Просто распакуйте архив с пакетом библиотек в любую папку на вашем компьютере. Внутри этой папки находятся файлы *mb* (по одному файлу на материал). Текстуры, используемые в материалах, находятся в папке *material_maps*. Папка *environments* содержит 3 варианта HDR изображений, которые вы можете использовать для окружения (каждый вариант представлен в трех разрешениях: 1k, 2k и 4k).
     </p>
 
 
     [anchor:adding_materials_to_project]
 
-    <h2>Adding Materials to Project</h2>
+    <h2>Добавление материалов к проекту</h2>
 
     <p>
-      In order to use a library material in a project, invoke the <strong>File -> Import</strong> in the Hypershade editor window:
+      Для того, чтобы использовать материал из библиотеки в проекте, вызовите команду <strong>File -> Import</strong> в окне редактора Hypershade:
     </p>
 
     <img src="files/mat-library-maya/hypershade-import.jpg" alt="Import material in Hypershade editor" class="centered" style="max-width: 750px">
 
     <p>
-      Navigate to the library folder, select *mb* file, specify *Load no references* in *Load Settings*, then click *Import*:
+      Перейдите в папку библиотеки, выберите файл *mb*, укажите *Load no references* в *Load Settings*, затем нажмите *Import*:
     </p>
 
     <img src="files/mat-library-maya/hypershade-import-no-references.jpg">
 
     <p>
-      Once a material is imported, you should be able to assign it to a model. Select a model, click using right mouse button, then <strong>Assign Existing Material->Name</strong>:
+      После того как материал импортирован, вы должны иметь возможность назначить его модели. Выберите модель, щелкните правой кнопкой мыши, затем <strong>Assign Existing Material->Name</strong>:
     </p>
 
     <img src="files/mat-library-maya/assign-material.jpg" alt="Assigning material in Maya" class="centered" style="max-width: 750px">
 
     <p>
-      The last step is to delete unused reference to the material library:
+      Последним шагом является удаление неиспользуемых ссылок на библиотеку материалов:
     </p>
 
     <img src="files/mat-library-maya/outliner-remove-reference.jpg" class="centered" style="max-width: 527px">
@@ -66,13 +66,13 @@
 
     [anchor:setting_up_the_environment]
 
-    <h2>Setting up the Environment</h2>
+    <h2>Настройка окружения</h2>
 
     <p>
-      Eevee-based materials require the environment to be set up, otherwise the materials will look dark and non-reflective. The environment is already set up in Verge3D's default cube project which you can use as a basis for your own app.
+      Без настройки окружения материалы будут выглядеть темными и не отражающими. Окружение уже настроено в проекте куба Verge3D по умолчанию, который вы можете использовать в качестве основы для собственного приложения.
     </p>
     <p>
-      Alternatively, you can configure the environment from scratch as shown in this <a href="https://youtu.be/9BzE98XIOnI" target="_blank">video tutorial</a>. You can use either of HDR textures in the *environments* folder of a material pack for this purpose.
+      В качестве альтернативы вы можете настроить среду с нуля, как показано <a href="https://youtu.be/9BzE98XIOnI" target="_blank">здесь</a>. Для этого можно использовать любую из HDR-текстур в папке *environments* пакета материалов.
     </p>
 
 
@@ -81,34 +81,34 @@
     <h2>UV Mapping</h2>
 
     <p>
-      Most materials in the library require models to be UV-mapped. Consider unwrapping your models for best results.
+      Большинство материалов в библиотеке требуют, чтобы модели были отображены в ультрафиолете. Для достижения наилучших результатов следует развернуть модели.
     </p>
 
 
     [anchor:relocating_textures_to_app_folder]
 
-    <h2>Relocating Textures to App Folder</h2>
+    <h2>Перемещение текстур в папку приложений</h2>
 
     <p>
-      For the sake of integrity of your application (which is important if you're transferring your project sources to a third party), you can save the textures used by the imported materials in the app folder as described below.
+      Для обеспечения целостности вашего приложения (важно, если вы передаете исходники проекта третьим лицам), вы можете сохранить текстуры, используемые импортированными материалами, в папке приложения, как описано ниже.
     </p>
 
     <ol>
 
       <li>
-        Open the *File Path Editor* in Maya:
+        Откройте *File Path Editor* в Maya:
       </li>
 
       <img src="files/mat-library-maya/file-path-editor-menu.jpg" class="centered" style="max-width: 532px">
 
       <li>
-        Find textures which are used by the imported material. Copy these textures from the *material_maps* to the application folder:
+        Найдите текстуры, которые используются импортированным материалом. Скопируйте эти текстуры из *material_maps* в папку приложения:
       </li>
 
       <img src="files/mat-library-maya/file-path-editor.jpg" alt="Maya File Path Editor" class="centered" style="max-width: 482px">
 
       <li>
-        Select these materials in the editor, then click on the *Repath Files* button. A new dialog appears, specify *New Path* to the application directory, enable *Repath Currently Resolved Files* option, then click *Repath*:
+        Выберите эти материалы в редакторе, затем нажмите на кнопку *Repath Files*. Появится новое диалоговое окно, укажите *New path* к директории приложения, включите опцию *Repath Currently Resolved Files*, затем нажмите *Repath*:
       </li>
 
       <img src="files/mat-library-maya/file-path-editor-repath.jpg" alt="Repath textures in Maya" class="centered" style="max-width: 414px">
@@ -116,20 +116,20 @@
     </ol>
 
     <p>
-      You can check the integrity of your application by moving its folder to another location in your file system. Open the *mb* (or *ma*) file and make sure no errors with missing assets are generated.
+      Вы можете проверить целостность вашего приложения, переместив его папку в другое место в вашей файловой системе. Откройте файл *mb* (или *ma*) и убедитесь, что не возникло ошибок с отсутствующими ассетами.
     </p>
 
 
-    <h2>See Also</h2>
+    <h2>Смотрите также</h2>
 
     <p>
-      Familiarize yourself with the material system used in Verge3D by reading the <a href="manual/ru/maya/Materials.html">Materials</a> guide.
+      Ознакомьтесь с системой материалов, используемой в Verge3D, прочитав статью <a href="manual/ru/maya/Materials.html">Материалы</a>.
     </p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
    </article></body>
