--- a/manual/ru/maya/Object-Constraints.html
+++ b/manual/ru/maya/Object-Constraints.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for Maya: Object Constraints - Soft8Soft</title>
+    <title>Verge3D для Maya: Object-Constraints(Ограничения Объектов) - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="This page contains the information about Maya's object constraints supported in Verge3D."/>
     <base href="../../../" />
@@ -11,10 +11,12 @@
   <body><article>
 
 
-    <h1>Object Constraints / Maya</h1>
+    <h1>
+      Object-Constraints(Ограничения Объектов) / Maya</h1>
 
     <p>
-    This page contains the information about Maya's object <a href="https://knowledge.autodesk.com/support/maya/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/Maya-CharacterAnimation/files/GUID-7665A291-FAA7-44C0-BDEB-A6C83482116C-htm.html" target="_blank">constraints</a> which can be used with Verge3D.
+      Данная страница содержит информацию об <a href="https://knowledge.autodesk.com/support/maya/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/Maya-CharacterAnimation/files/GUID-7665A291-FAA7-44C0-BDEB-A6C83482116C-htm.html" target="_blank">ограничениях</a> объектов Maya, которые можно использовать в Verge3D.
+
     </p>
 
     [contents]
@@ -22,10 +24,10 @@
 
     [anchor:Constraints_and_Settings]
 
-    <h2>Constraints and Settings</h2>
+    <h2>Ограничения и настройки</h2>
 
     <p>
-    Below are are listed Maya object constraints that can be used with Verge3D. The parameters supported by Verge3D are overlaid with green color.
+      Ниже перечислены объектные ограничения Maya, которые могут быть использованы в Verge3D. Параметры поддерживаемые Verge3D выделены зеленым цветом. 
     </p>
 
 
@@ -34,7 +36,7 @@
     <h3>Parent</h3>
 
     <p>
-      This is the constraint version of the standard parent/children relationship between objects.
+      Это версия ограничения стандартного отношения "родитель/потомок" между объектами.
     </p>
 
     <img src="files/constraints-maya/parent.jpg" class="centered" style="max-width: 447px">
@@ -46,7 +48,7 @@
     <h3>Point</h3>
 
     <p>
-      This constraint forces the object to which it is applied to have the same location as its target.
+      Это ограничение заставляет объект, к которому оно применяется, иметь то же местоположение, что и его цель.
     </p>
 
     <img src="files/constraints-maya/point.jpg" class="centered" style="max-width: 447px">
@@ -58,7 +60,7 @@
     <h3>Orient</h3>
 
     <p>
-      This constraint forces the object to which it is applied to match the rotation of its target.
+      Это ограничение заставляет объект, к которому оно применяется, соответствовать вращению его цели.
     </p>
 
     <img src="files/constraints-maya/orient.jpg" class="centered" style="max-width: 446px">
@@ -67,10 +69,10 @@
 
     [anchor:scale_constraint]
 
-    <h3>Scale</h3>
+    <h3>Масштаб</h3>
 
     <p>
-      This constraint forces the object to which it is applied to match the scale of its target.
+      Это ограничение заставляет объект, к которому оно применяется, соответствовать масштабу цели.
     </p>
 
     <img src="files/constraints-maya/scale.jpg" class="centered" style="max-width: 446px">
@@ -82,31 +84,30 @@
     <h3>Aim</h3>
 
     <p>
-      This constraint applies rotations to its owner, so that it always points a given *Aim* axis towards its target, with another *Up* axis permanently maintained as much aligned with the global Z axis as possible. Thus you can implement billboarding with this constraint.
-    </p>
+      Это ограничение применяет вращение к своему владельцу, так что он всегда направляет заданную ось *Aim* на свою цель, а другая ось *Up* постоянно поддерживается максимально выровненной с глобальной осью Z. Таким образом, с помощью этого ограничения можно реализовать билбординг(псевдотрёхмерность).</p>
 
     <img src="files/constraints-maya/aim.jpg" class="centered" style="max-width: 447px">
 
-    <p class="note">Verge3D does support only axis-aligned *Aim* and *Up* vectors such as <strong>[1,0,0]</strong> or <strong>[0,-1,0]</strong>.</p>
+    <p class="note">Verge3D поддерживает только выровненные по оси векторы *Aim* и *Up*, такие как <strong>[1,0,0]</strong> или <strong>[0,-1,0]</strong>.</p>
 
 
     [anchor:use_with_puzzles]
 
-    <h2>Use with Puzzles</h2>
+    <h2>Использование с пазлами</h2>
 
     <p>
-      All constraints, once assigned in Maya and exported, can be removed, muted or ummuted with a <a href="manual/ru/puzzles/Animation.html#remove_mute_unmute_constraint">puzzle</a>.
+      Все назначенные в Maya ограничения, после экспортирования могут быть удалены, отключены и включены с помощью <a href="manual/ru/puzzles/Animation.html#remove_mute_unmute_constraint">пазлов</a>.
     </p>
 
     <p>
-      In addition, *Point/Orient/Scale* constraints can be assigned at runtime with <a href="manual/ru/puzzles/Animation.html#limit_transform">puzzles</a>.
+      Кроме того, ограничения *Point/Orient/Scale* могут быть назначены во время запуска с помощью <a href="manual/ru/puzzles/Animation.html#limit_transform">пазлов</a>.
     </p>
 
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
